# loanwhiz

./: .gitignore  DEMO-RISKS.md  LICENSE  MODELING-GAPS.md  README.md  SYSTEM-STATUS.md  inspect-fields.ts  library-map.html  package-lock.json  package.json  pyproject.toml  smoke-test-csv.ts
.liz/plans/: 2026-06-03-api-expansion.md  2026-06-03-demo-ui-v2.md  2026-06-03-demo-ui.md  2026-06-03-loanwhiz.md  2026-06-04-deal-generality-and-27-period-data.md  2026-06-04-scale-and-framework.md  2026-06-05-demo-readiness.md  2026-06-05-model-builder-spine.md  2026-06-05-seasoned-deal-validation.md  2026-06-06-cross-deal-primitives.md  2026-06-20-edw-deal-analysis-engine.md  2026-06-23-tape-path-canonicalisation.md  2026-06-24-productionising-loanwhiz.md  2026-06-27-ground-truth-quality-engine.md
clients/chat/: README.md  app.py  requirements.txt
clients/compliance/: README.md  app.py  requirements.txt
clients/dashboard/: README.md  app.py  requirements.txt
clients/demo/: CONTRACT.md  RUNBOOK.md  __init__.py  app.py  shell.py
clients/demo/tabs/: __init__.py  chat.py  compliance.py  overview.py  pool.py  projection.py  waterfall.py
demo/: README.md  mcp-terminal.html  render-recipe.json  run_green_lion.py
docs/: data-card.md  governance.md  model-card.md  quickstart.md  spike-S0-ground-truth-consistency.md  tape-ingestion.md
docs/primitives/: CATALOGUE.md  CONTRIBUTING.md
docs/superpowers/specs/: 2026-06-20-canonical-domain-schema-design.md  2026-06-20-cold-start-edw-deal-engine-design.md  2026-06-20-deal-comparison-tool-design.md  2026-06-20-prospectus-extractor-generalization-design.md  2026-06-20-report-extractor-design.md
mcp/: README.md  conftest.py  pyproject.toml
mcp/loanwhiz_primitives_mcp/: __init__.py  catalogue.py  reachability.py  server.py
mcp/tests/: test_server_smoke.py
presentation/: LoanWhiz-Presentation.pptx  build_deck.py  loanwhiz-deck.json
scripts/: __init__.py  build_cards.py  extract_c2_deals.py  run-demo-v2.sh  s0_extract_reports.py  s0_reconcile.py  seed_deal_models.py  seed_tape_analytics.py
src/: index.ts  types.ts
src/lib/: csv.ts  llm.ts  pdf.ts
src/loanwhiz/: __init__.py  config.py
src/loanwhiz/agent/: __init__.py  executor.py  planner.py  tools.py
src/loanwhiz/api/: README.md  __init__.py  compare.py  extraction_jobs.py  main.py  run_api.py
src/loanwhiz/data/: deals.json  deeploans_client.py  green_lion.py
src/loanwhiz/domain/: __init__.py  esma_annex2.py  inputs.py  provenance.py  rules.py  state.py
src/loanwhiz/extraction/: assembler.py  collateral_ledger.py  covenant_extractor.py  definitions_graph.py  section_router.py  taxonomy.py  waterfall_extractor.py
src/loanwhiz/governance/: __init__.py  agent_model_card.py  evidence_pack.py  finos_conformance.py
src/loanwhiz/primitives/: __init__.py  audit_logger.py  base.py  capability_matrix.py  cashflow_projector.py  collections_aggregator.py  covenant_monitor.py  deal_state.py  engine_validation_harness.py  esma_tape_normaliser.py  loan_level_amortisation.py  notes_cash_parser.py  period_state_machine.py  pool_pipeline_harness.py  pool_stratification.py  portfolio_monitor.py  prospectus_extractor.py  proximity_trend_monitor.py  quality_harness.py  reconciler.py  registry.py  (+15 more)
src/tools/: analyze-investor-report.ts  diff-periods.ts  load-esma-tape.ts  parse-prospectus.ts  query-deal.ts
tests/: breadth_harness.py  test_agent_tools.py  test_api.py  test_assembler.py  test_audit_logger.py  test_breadth_cross_jurisdiction.py  test_c2_jurisdiction_seeds.py  test_capability_matrix.py  test_cashflow_projector.py  test_chat_interface.py  test_collateral_ledger.py  test_collections_aggregator.py  test_compare.py  test_compliance_view.py  test_config.py  test_covenant_extractor.py  test_covenant_monitor.py  test_covenant_reserve_gap.py  test_cross_jurisdiction_cold_start.py  test_cross_jurisdiction_deals.py  test_dashboard.py  test_deal_state.py  test_deeploans_integration.py  test_definitions_graph.py  test_demo_shell.py  test_demo_smoke.py  test_domain_schema.py  test_engine_validation_harness.py  test_esma_annex2.py  test_esma_tape_normaliser.py  test_executor.py  test_extraction_jobs.py  test_finos_conformance.py  test_governance.py  test_loan_level_amortisation.py  test_multi_period_27.py  test_notes_cash_parser.py  test_period_state_machine.py  test_planner.py  test_pool_pipeline_harness.py  (+37 more)
web/: .env.example  CONTRACT.md  README.md  package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/components/: app-sidebar.tsx  capability-matrix-grid.tsx  chat-panel.tsx  deal-selector.tsx  evidence-pack-sheet.tsx  finos-conformance-panel.tsx  page-placeholder.tsx  page-states.tsx  table-pagination.tsx  top-bar.tsx
web/hooks/: use-mobile.ts
web/lib/: api.ts  deal-context.tsx  format.ts  nav.ts  use-pagination.ts
(+23 files in other folders)
