[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loanwhiz"
version = "0.1.0"
description = "Structured finance agent framework — SF-native primitives, deal model extraction, and LangGraph orchestration"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2",
    "google-genai>=1.0",
    "docling>=2.0",
    # docling's default OCR (RapidOCR) needs the onnxruntime engine to load the
    # PP-OCRv6 models it requests; without it docling falls back to the rapidocr
    # torch engine, which ships only PP-OCRv4/v5 and raises
    # "Unsupported configuration: torch.PP-OCRv6.det.small" — breaking prospectus
    # extraction. docling documents `pip install rapidocr onnxruntime` for this.
    "onnxruntime>=1.20",
    "pandas>=2.2",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "langchain-google-vertexai>=2.0",
]

[project.urls]
Repository = "https://github.com/waafirio/loanwhiz"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the repo root on sys.path so the offline driver scripts (``scripts/``,
# which live outside the ``src/`` package) are importable from tests — the
# #384 "one extraction path, not a fork" check imports ``scripts.extract_c2_deals``.
pythonpath = ["."]
markers = [
    "slow: marks tests that require network access or external services (deselect with '-m not slow')",
    "integration: marks tests that make real external API calls (deselect with '-m not integration')",
]

# Coverage is *measured*, not gated. Run the offline suite with coverage via:
#   pytest --cov=loanwhiz --cov-report=term-missing -m "not integration and not slow"
# There is intentionally no `--cov-fail-under` here: the baseline is reported,
# not enforced as a hard CI floor (a failing threshold would red an otherwise
# green suite and isn't meaningful until a baseline exists). Raise a floor
# deliberately once the baseline is known. See SYSTEM-STATUS.md "Coverage baseline".
[tool.coverage.run]
source = ["loanwhiz"]
branch = true
omit = [
    "*/tests/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
